# lava_lamp_sph

./: .gitignore  Cargo.toml
init_distros/: dist_lava_lamp
src/: main.rs  map.rs  utility.rs
web/: .gitignore  Cargo.toml  index.html
web/src/: lib.rs
