[package]
name = "lava_lamp_sph"
version = "0.1.0"
authors = ["countableclouds <aksharramkumar@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
render = ["piston_window"]

[dependencies]
rayon = "1.5.0"
piston_window = { version = "0.105.0", optional = true }
rand = "0.7.3"
