[package]
name = "lava_lamp_sph"
version = "0.1.0"
authors = ["countableclouds <aksharramkumar@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rayon = "1.5.0"
nalgebra = "0.23.0"
kiss3d = "0.27.0"
rand = "0.7.3"

