[package]
name = "web"
version = "0.1.0"
authors = ["aemino <aeminodev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
connectome-model = { path = ".." }
console_error_panic_hook = "0.1.6"
kiss3d = { version = "0.28.0", features = ["conrod"] }
nalgebra = "0.23.1"
petgraph = { version = "0.5.1", features = ["stable_graph"] }
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
